test-book-client-write-write test is failing
evolution-data-server 3.29.91
cmake set of params:
+ /usr/bin/cmake -DBUILD_SHARED_LIBS:BOOL=ON -DCMAKE_C_FLAGS_RELEASE:STRING=-DNDEBUG -DCMAKE_CXX_FLAGS_RELEASE:STRING=-DNDEBUG -DCMAKE_Fortran_FLAGS_RELEASE:STRING=-DNDEBUG -DCMAKE_INSTALL_PREFIX:PATH=/usr -DCMAKE_VERBOSE_MAKEFILE:BOOL=ON -DCMAKE_VERBOSE_MAKEFILE:BOOL=ON -DINCLUDE_INSTALL_DIR:PATH=/usr/include -DLIB_INSTALL_DIR:PATH=/usr/lib64 -DSHARE_INSTALL_PREFIX:PATH=/usr/share -DSYSCONF_INSTALL_DIR:PATH=/etc -DLIB_SUFFIX=64 -G 'Unix Makefiles' -DENABLE_DOT_LOCKING=OFF -DENABLE_FILE_LOCKING=fcntl -DENABLE_GTK_DOC=ON -DENABLE_INSTALLED_TESTS=ON -DENABLE_INTROSPECTION=ON -DENABLE_LARGEFILE=ON -DENABLE_MAINTAINER_MODE=OFF -DENABLE_SMIME=ON -DENABLE_UOA=OFF -DENABLE_VALA_BINDINGS=ON -DWITH_KRB5=ON -DWITH_LIBDB=/usr -DWITH_OPENLDAP=ON
-- Configure options:
-- LIB_SUFFIX ................... 64
-- CMAKE_INSTALL_PREFIX ......... /usr
-- BIN_INSTALL_DIR .............. /usr/bin
-- INCLUDE_INSTALL_DIR .......... /usr/include
-- LIB_INSTALL_DIR .............. /usr/lib64
-- LIBEXEC_INSTALL_DIR .......... /usr/libexec
-- SHARE_INSTALL_PREFIX ......... /usr/share
-- LOCALE_INSTALL_DIR ........... /usr/share/locale
-- SYSCONF_INSTALL_DIR .......... /etc
-- WITH_DBUS_SERVICE_DIR ........ /usr/share/dbus-1/services
-- WITH_SYSTEMDUSERUNITDIR ...... /usr/lib/systemd/user
-- ENABLE_CODE_COVERAGE ......... OFF
-- ENABLE_SCHEMAS_COMPILE ....... ON
-- ENABLE_INTROSPECTION ......... ON
-- ENABLE_GTK_DOC ............... ON
-- ENABLE_INSTALLED_TESTS ....... ON
-- WITH_KRB5 .................... ON
-- WITH_KRB5_INCLUDES ...........
-- WITH_KRB5_LIBS ...............
-- WITH_OPENLDAP ................ /usr
-- WITH_SUNLDAP ................. OFF
-- WITH_STATIC_LDAP ............. OFF
-- WITH_PHONENUMBER ............. OFF
-- ENABLE_SMIME ................. ON
-- WITH_NSPR_INCLUDES ...........
-- WITH_NSPR_LIBS ...............
-- WITH_NSS_INCLUDES ............
-- WITH_NSS_LIBS ................
-- ENABLE_MAINTAINER_MODE ....... OFF
-- WITH_PRIVATE_DOCS ............ OFF
-- ENABLE_GTK ................... ON
-- ENABLE_OAUTH2 ................ ON
-- WITH_GOOGLE_CLIENT_ID ........ 590402290962-2i0b7rqma8b9nmtfrcp7fa06g6cf7g74.apps.googleusercontent.com
-- WITH_GOOGLE_CLIENT_SECRET .... mtfUe5W8Aal9DcgVipOY1T9G
-- WITH_OUTLOOK_CLIENT_ID ....... cc6e0693-0e26-4220-8322-9d363e308fc6
-- WITH_OUTLOOK_CLIENT_SECRET ...
-- ENABLE_EXAMPLES .............. ON
-- ENABLE_GOA ................... ON
-- ENABLE_UOA ................... OFF
-- ENABLE_BACKEND_PER_PROCESS ... OFF
-- WITH_LIBDB ................... /usr
-- WITH_LIBDB_CFLAGS ............
-- WITH_LIBDB_LIBS ..............
-- ENABLE_BACKTRACES ............ OFF
-- ENABLE_IPV6 .................. ON
-- ENABLE_WEATHER ............... ON
-- ENABLE_CANBERRA .............. ON
-- ENABLE_DOT_LOCKING ........... OFF
-- ENABLE_FILE_LOCKING .......... fcntl
-- ENABLE_BROKEN_SPOOL .......... OFF
-- ENABLE_GOOGLE ................ ON
-- ENABLE_LARGEFILE ............. ON
-- ENABLE_VALA_BINDINGS ......... ON
-- Configuring done
The following tests FAILED:
2 - test-migration (Child aborted)
30 - test-book-client-write-write (SIGTRAP)
Full check log in attachment check.log