I#26 - test-book-client-write-write test is failing

Closes https://gitlab.gnome.org/GNOME/evolution-data-server/issues/26